# streamlit-mtg-artist-recognizer

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  scratch.ipynb
deploy/: build_image.sh  deploy_image.sh
image_downloader/: config.yaml  main.py
model_downloader/: config.yaml  main.py  modify_requirements_script.py
st_app/: Dockerfile  app.py
